[package]
name = "blaze2pg"
version = "0.1.0"
edition = "2021"

[workspace]
members = ["."]

[dependencies]
diesel = { version = "2.2.0", features = ["postgres", "r2d2"] }
dotenv = "0.15"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
r2d2 = "0.8"
tokio = { version = "1.38.0", features = ["macros", "rt-multi-thread"] }
tokio-macros = "2.3.0"
