[package]
name = "blaze2pg"
version = "0.1.0"
edition = "2021"

[workspace]
members = ["."]

[dependencies]
dotenv = "0.15"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.38.0", features = ["macros", "rt-multi-thread"]}
tokio-postgres = "0.7.10"
diesel = { version = "2.2.0", features = ["postgres", "r2d2"] }
anyhow = "1.0.58"

# Logging
tracing = "0.1.37"
tracing-subscriber = "0.3.17"