[package]
name = "fhir2sql"
version = "0.2.0"
edition = "2021"
license = "Apache-2.0"

[workspace]
members = ["."]

[dependencies]
dotenv = "0.15"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.38.0", features = ["macros", "rt-multi-thread", "full", "time", "signal"]}
sqlx = { version = "0.8.2", features = [ "runtime-tokio", "postgres"] } 
anyhow = "1.0.58"
chrono = "0.4"

# Logging
tracing = "0.1.37"
tracing-subscriber = "0.3.17"

[profile.release]
#opt-level = "z"     # Optimize for size.
lto = true          # Enable Link Time Optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations.
panic = "abort"     # Abort on panic
strip = true        # Automatically strip symbols from the binary.